--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 ]
 dynamic = ["version", "readme"]
 requires-python = ">=3.12"
-keywords = ["hy", "hylang", "utilities"]
+keywords = ["hy", "hylang", "utilities", "automation", "formatter"]
 license = {file = "LICENSE"}
 classifiers = [
     "License :: OSI Approved :: MIT License",
@@ -22,6 +22,10 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
     "Programming Language :: Lisp",
     "Programming Language :: Hy",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Topic :: Software Development :: Quality Assurance",
     "Topic :: Software Development :: Libraries",
     "Topic :: Utilities"
 ]
